main/default/objects/Learning__c/fields/Current_Published_Version_Formula__c.field-meta.xml
<CustomField>
    <fullName>Current_Published_Version_Formula__c</fullName>
    <formula>IF(!ISBLANK(Current_Published_Version__c),HYPERLINK(&quot;/&quot;&amp;Current_Published_Version__c,&quot;Version &quot;&amp;TEXT(Current_Published_Version__r.Version__c),&quot;_self&quot;) ,&quot;&quot;)</formula>
    <label>Current Published Version</label>
    <type>Text</type>
</CustomField>