main/default/objects/Learning__c/fields/Custom_Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>Custom_Preview_URL__c</fullName>
    <description>URL used for customer customization purposes, currently hidden from the layout and won&apos;t be used by the package</description>
    <label>Custom Preview URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>