main/default/objects/Learning__c/fields/Duration_hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_hours__c</fullName>
    <formula>if(!ISBLANK(Duration__c),
IF(Duration__c &gt; 59,
TEXT(FLOOR((Duration__c)/60))&amp;&quot; hr(s) &quot;&amp;TEXT(FLOOR(MOD((Duration__c)/60,1)*60))&amp;&quot; mins&quot;
,TEXT(FLOOR(Duration__c))&amp;&quot; mins&quot;
)
,&quot;&quot;)</formula>
    <label>Duration (hours)</label>
    <type>Text</type>
</CustomField>