main/default/objects/Learning__c/fields/Is_Published_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_Published_Formula__c</fullName>
    <formula>IF(Published__c,TRUE,FALSE)</formula>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>