main/default/objects/Learning__c/fields/Type_Image__c.field-meta.xml
<CustomField>
    <fullName>Type_Image__c</fullName>
    <formula>CASE( RecordType.DeveloperName,
        &quot;Task&quot;, IMAGE(&quot;/resource/almond_app_icons/task.png&quot;,&quot;Task&quot;),
        &quot;Resource&quot;, IMAGE(&quot;/resource/almond_app_icons/resource.png&quot;,&quot;Task&quot;),
        &quot;Quiz&quot;,IMAGE(&quot;/resource/almond_app_icons/quiz.png&quot;,&quot;Task&quot;),
        IMAGE(&quot;/resource/almond_app_icons/custom.png&quot;,&quot;Custom&quot;))</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>