main/default/objects/Learning__c/recordTypes/Resource.recordType-meta.xml
<RecordType>
    <fullName>Resource</fullName>
    <active>true</active>
    <description>Resource</description>
    <label>Resource</label>
</RecordType>