main/default/objects/Learning__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Duration__c</columns>
    <columns>Published__c</columns>
    <columns>Sync_progress__c</columns>
    <columns>Current_Published_Version_Formula__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>